tests/valid/definite/ListLength_Valid_1.whiley
void System::main([string] args):
    arr = [1,2,3]
    assert |arr| == 3
    print str(arr[0])
